src/scss/partials/_global.scss
//align the box-sizing across clients and make scrolling smooooth
*, *::before, *::after {
    box-sizing: border-box;
    scroll-behavior: smooth;
}

//remove the default margin/padding on some of the baseline elements
body, h1, h2, h3, p, blockquote {
    margin: 0;
    padding: 0;
}

//
html, body {
    height: 100%;
}

//
body {

	//
	background: var(--colour-background);

    //@todo - this isn't as useful when setting ALL THE PROPERTIES
    @include font($family: var(--ff-body), $weight: 400, $colour: var(--colour-foreground), $size: var(--font-size-medium), $line-height: calc(var(--font-size-medium) * 1.6));

    //
    letter-spacing: 0.03em;

    //
    @include flex($direction: column, $gap: 3rem);

    //primary brand colour - use sparingly for accents etc
    --colour-accent     : #{$colour-accent};
    --colour-accent-alt : #{$colour-accent-alt};

    //define the main text and background colours with alternates
    --colour-foreground     : #{$colour-lm-foreground};
    --colour-foreground-alt : #{$colour-lm-foreground-alt};
    --colour-background     : #{$colour-lm-background};
    --colour-background-alt : #{$colour-lm-background-alt};

    //change the colours for the dark mode
    @media (prefers-color-scheme: dark) {
        --colour-foreground     : #{$colour-dm-foreground};
        --colour-foreground-alt : #{$colour-dm-foreground-alt};
        --colour-background     : #{$colour-dm-background};
        --colour-background-alt : #{$colour-dm-background-alt};
    }

    //
    &.dark-theme {
        --colour-foreground     : #{$colour-dm-foreground};
        --colour-foreground-alt : #{$colour-dm-foreground-alt};
        --colour-background     : #{$colour-dm-background};
        --colour-background-alt : #{$colour-dm-background-alt};
    }

}

//add a "skip to content" link for screen readers and keyboard warriors
a[href="#main"] {

    //
    @include absolute($top: 0.5em, $left: 12vh);
    position: absolute !important;

    //
    outline: 10px solid var(--colour-background);
    border: 2px solid var(--colour-accent);
    background-color: var(--colour-background);
        
    //
    border-radius: 0.5rem;

    //
    padding: 0.5rem 1rem;
    transform: translateY(-130%);

    //show it when it is in focus
    &:focus {
        transform: translateY(0%);
    }

    //only animate if the user does express a reduced motion preference
    @media screen and (prefers-reduced-motion: no-preference) {
        transition: transform 0.3s;
    }
    
}

//add a wrapper to offset the main content and header away from the top and left sides of the viewport
.site-wrapper {

    //
    max-width: 70vw;
    margin-top: 2vh;
    margin-left: 10vh;

    //
    flex: 0 1 100%;

}

.site-content {

    //
    @include flex($direction: column, $gap: 1rem);

    //
    h1 {
        @include font($family: var(--ff-heading), $size: clamp(3rem, 12vw + 1rem, 6rem), $weight: 600, $line-height: 1);
        text-transform: uppercase;
    }

    //subtitle
    p.post-subtitle {
        @include font($size: var(--font-size-large), $line-height: calc(var(--font-size-large) * 1.3));
        max-width: 35ch;
    }

    //how long should the article take to read
    p.post-time-to-read {

        //
        @include font($colour: var(--colour-foreground-alt), $size: var(--font-size-small), $line-height: calc(var(--font-size-small) * 1.3));

        //
        @include flex($align: center, $gap: 0.5rem);

        //
        margin-block-end: 1em;

    }

}

//setup some simple icons that we can use across the site
.icon {

    //
    display: inline-block;

    //
    width: 24px;
    height: 24px;

    //
    background-color: var(--colour-accent);

    //
    &[data-icon="time"] {
        mask: url(/icons/time.svg) no-repeat center / contain;
        -webkit-mask: url(/icons/time.svg) no-repeat center / contain;
    }

}

//
.theme-toggle {

    //just stick it in the top right corner
    @include fixed($top: 3rem, $right: 3rem);

    //
    cursor: pointer;
    opacity: 0.8;
    line-height: 0;

    //
    &:hover, &:focus {
        opacity: 1;
    }

    //
    svg {
        fill: var(--colour-foreground);
    }

    //
    @at-root {

        //add some transitions to the elements
        .theme-toggle-outer { transform-origin: center center; transition: transform 750ms cubic-bezier(0.11, 0.14, 0.29, 1.32); }
        .theme-toggle-inner { transition: transform 500ms ease-out; }

        //when the theme is swapped, swap between a "sun" and "moon" motif and spin the outer element
        .light-theme .theme-toggle-outer { transform: rotate(0.5turn); }
        .light-theme .theme-toggle-inner { transform: translate(-10%, -5%); }

    }

}

